# sleplet

./: .dockerignore  .flake8  .gitattributes  .gitignore  .isort.cfg  .lfsconfig  .pre-commit-config.yaml  .renovaterc  .renovaterc.json5  .travis.yml  .typos.toml  .vale.ini  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.txt  LICENSE  LICENSE.md  LatLon Plot.ipynb  MANIFEST.in  README.md  Using a Slider and Buttons.ipynb  codemeta.json  config.py  conftest.py  create_figures.sh  create_letter_figures.sh  dirac_delta.py  diracdelta_northpole.html  diracdelta_northpole.py  diracdelta_northpole_parametric.html  earth.py  earth.yml  elongated_gaussian.py  environment.yml  figures.sh  gaussian.py  harmonic_methods.html  helper.py  index.html  (+31 more)
.github/: pull.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  documentation.md  documentation.yaml  documentation.yml  feature_request.md  feature_request.yaml  feature_request.yml  question.md  question.yaml  question.yml
.github/workflows/: checks.yml  codeflash-optimize.yaml  deploy.yaml  deploy.yml  docs.yml  documentation.yaml  documentation.yml  examples.yaml  examples.yml  examples_skip.yml  licence.yaml  licence.yml  license.yml  links.yaml  linting.yaml  linting.yml  paper.yaml  paper.yml  run_tests.yml  test.yaml  test.yml  test_and_deploy.yml  tests.yml  tests_and_deploy.yml
data/: convert_data.py  index.html  setup_pooch.html
data/other/: index.html
docker/: Dockerfile
documentation/: DOCUMENTATION.md  documentation.md
examples/arbitrary/: _denoising_slepian_wavelet.py  _slepian_wavelet_covariance.py  eigenvalues_combined.py
examples/mesh/: denoising_slepian_mesh.py  mesh_region.py  mesh_slepian_eigenvalues.py  mesh_tiling.py  produce_table.py
examples/misc/: _denoising_axisym.py  denoising_axisym_africa.py  denoising_axisym_earth.py  denoising_axisym_south_america.py  translation_normalisation.py  wavelet_transform.py
examples/polar_cap/: eigenfunctions.py  eigenvalues.py  fried_egg.py  simons_5_1.py  simons_5_3.py  slepian_coefficients.py  slepian_error.py
examples/wavelets/: axisymmetric_tiling.py  axisymmetric_wavelet_covariance.py
figures/: .gitignore  create_figures.sh  letter_figures.sh
functions/: africa.html  axisymmetric_wavelet_coefficients_africa.html  axisymmetric_wavelet_coefficients_earth.html  axisymmetric_wavelet_coefficients_south_america.html  axisymmetric_wavelets.html  coefficients.html  coefficients.py  dirac_delta.html  directional_spin_wavelets.html  earth.html  elongated_gaussian.html  f_lm.html  f_p.html  flm.html  fp.html  gaussian.html  harmonic_gaussian.html  identity.html  index.html  noise_earth.html  ridgelets.html  slepian.html  slepian_africa.html  slepian_dirac_delta.html  slepian_identity.html  slepian_noise_africa.html  slepian_noise_south_america.html  slepian_south_america.html  slepian_wavelet_coefficients_africa.html  slepian_wavelet_coefficients_south_america.html  slepian_wavelets.html  south_america.html  spherical_harmonic.html  squashed_gaussian.html  wmap.html
functions/flm/: africa.html  axisymmetric_wavelet_coefficients_africa.html  axisymmetric_wavelet_coefficients_earth.html  axisymmetric_wavelet_coefficients_south_america.html  axisymmetric_wavelets.html  axisymmetric_wavelets.py  dirac_delta.html  directional_spin_wavelets.html  directional_spin_wavelets.py  earth.html  elongated_gaussian.html  gaussian.html  harmonic_gaussian.html  identity.html  identity.py  index.html  noise_earth.html  ridgelets.html  south_america.html  spherical_harmonic.html  squashed_gaussian.html  wmap.html
functions/fp/: index.html  slepian.html  slepian_africa.html  slepian_dirac_delta.html  slepian_identity.html  slepian_noise_africa.html  slepian_noise_africa.py  slepian_noise_south_america.html  slepian_south_america.html  slepian_wavelet_coefficients_africa.html  slepian_wavelet_coefficients_south_america.html  (+1 more)
meshes/: index.html  mesh.html  mesh_basis_functions.html  mesh_coefficients.html  mesh_field.html  mesh_harmonic_coefficients.html  mesh_noise_field.html  mesh_slepian.html  mesh_slepian_coefficients.html  mesh_slepian_field.html  mesh_slepian_functions.html  mesh_slepian_noise_field.html  mesh_slepian_wavelet_coefficients.html  mesh_slepian_wavelets.html
npy/: .gitignore
paper/: arxiv.tex  paper.bib  paper.md
plotting/: create_plot_mesh.html  create_plot_sphere.html  index.html  inputs.html  plotting_utils.html
pys2sleplet/: __init__.py  config.toml  sifting_convolution.py  slepian_arbitrary.py  slepian_functions.py  sphere.py
scripts/: axisymmetric_wavelet_covariance.html  axisymmetric_wavelet_covariance.py  config.ini  config.toml  convert_data.py  index.html  large_slepian_arbitrary_matrix.html  large_slepian_arbitrary_matrix.py  plotting.py  plotting_on_mesh.html  plotting_on_sphere.html  plotting_on_sphere.py  slepian_energy_leakage.html
slepian/: index.html  region.html  slepian_arbitrary.html  slepian_decomposition.html  slepian_functions.html  slepian_limit_lat_lon.html  slepian_polar_cap.html
sleplet/: __init__.py
templates/: config.mako
tests/: conftest.py  test_arbitrary_region.py  test_arrays.py  test_bool.py  test_convolution.py  test_decomposition.py  test_harmonic.py  test_loading_pooch.py  test_mesh.py  test_noise.py  test_parallel.py  test_plot.py  test_region.py  test_slepian_mesh.py  test_smoothing.py  test_strings.py  test_translation.py  test_wavelets.py
utils/: array_methods.html  bool_methods.html  class_lists.html  config.html  config.py  convolution_methods.html  denoising.html  harmonic_methods.html  harmonic_methods.py  index.html  integration_methods.html  logger.html  logger.py  mask_methods.html  mesh_methods.html  mesh_methods.py  noise.html  parallel_methods.html  plot_methods.html  plotly_methods.html  plotly_methods.py  region.html  slepian_arbitrary_methods.html  slepian_arbitrary_methods.py  slepian_methods.html  smoothing.html  smoothing.py  string_methods.html  validation.html  vars.html  vars.py  wavelet_methods.html  wavelet_methods.py
yaml/: earth.yml  input.yml  wmap.yml
(+1019 files in other folders)
